--- a/web-designing/file1.html
+++ b/web-designing/file1.html
@@ -24,5 +24,8 @@
     </ol>
     <a href="index.html">index page</a>
     <a href="link.html">link page</a>
+    <a href="ground/ground.html">ground.html</a>
+    <a href="ground/basement/basement.html">basement.html</a>
+    <a href="first/first.html">first.html</a>
 </body>
 </html>
