--- a/web-designing/index.html
+++ b/web-designing/index.html
@@ -9,5 +9,9 @@
     <h1 class="main-heading">Heading 1</h1>
     <a href="file1.html">file page</a> 
     <a href="link.html">link page</a>
+    <a href="first/first.html">first.html</a>
+    <a href="ground/ground.html">ground.html</a>
+    <a href="ground/basement/basement.html">basement.html</a>
+    <a href="mailto:yumna.hosain@gmail.com">Email</a>
 </body>
 </html>
