--- a/web-designing/link.html
+++ b/web-designing/link.html
@@ -8,5 +8,8 @@
 <body>
     <a href="index.html">index page</a>
     <a href="file1.html"> file page</a>
+    <a href="ground/ground.html">ground.html</a>
+    <a href="ground/basement/basement.html">basement.html</a>
+    <a href="first/first.html">first.html</a>
 </body>
 </html>
