--- a/boxmodel/homework.html
+++ b/boxmodel/homework.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHmHvbts_7VGLgkQqzAmhI7zLd1_QQZJ8j_w&s" alt="aptech" width="100%" height="100%">
+        </div>
+        <nav></nav>
+    </header>
+    <main></main>
     <section>
         <div class="row">
             <div class="column">
@@ -25,6 +32,7 @@
             </div>
         </div>
     </section>
+    <footer></footer>
 
 
 </html>
