--- a/boxmodel/homework.html
+++ b/boxmodel/homework.html
@@ -13,7 +13,8 @@
         <div class="logo">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHmHvbts_7VGLgkQqzAmhI7zLd1_QQZJ8j_w&s" alt="aptech" width="100%" height="100%">
         </div>
-        <nav></nav>
+        <nav>
+        </nav>
     </header>
     <main></main>
     <section>
