--- a/web-designing/userinput.html
+++ b/web-designing/userinput.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <script src="../js/userinput.js"></script>
+    <h1 id="name"></h1>
+    <h1 id="age"></h1>
+    <h1 id="fathername"></h1>
+    <h1 id="qualification"></h1>
+    <h1 id="city"></h1>
 </body>
 </html>
