--- a/boxmodel/pfunction.html
+++ b/boxmodel/pfunction.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/boxmodel/assets/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
+
 <body>
-   <button class="btn btn-outline-primary" onclick="param(1)" id="b1">1</button>
-<button class="btn btn-outline-primary" onclick="param(2)"id="b2">2</button>
-<button class="btn btn-outline-success" onclick="sum()">Click</button>
+    <button class="btn btn-outline-primary" onclick="param(1)" id="b1">1</button>
+    <button class="btn btn-outline-primary" onclick="param(2)" id="b2">2</button>
+    <button class="btn btn-outline-success" onclick="sum()">Click</button>
+    <p id="result"></p>
 </body>
 <script src="/boxmodel/js/pfunction.js"></script>
+
 </html>
