--- a/boxmodel/project1.html
+++ b/boxmodel/project1.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/project.css">
-    <script src="assets/jquery/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="/boxmodel/assets/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/boxmodel/css/project.css">
+    <script src="/boxmodel/jQuery/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
@@ -97,8 +97,8 @@
 
         </div>
     </div>
-    <script src="assets/js/data.js"></script>
-    <script src="assets/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+    <script src="/boxmodel/js/data.js"></script>
+    <script src="/boxmodel/assets/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
